@@ -2017,7 +2017,7 @@
           "description": ""
         },
         {
-          "name": "ICON_228",
+          "name": "ICON_HOT",
           "value": 228,
           "description": ""
         },
