@@ -3215,12 +3215,12 @@
     },
     {
       "name": "ToggleFullscreen",
-      "description": "Toggle window state: fullscreen/windowed (only PLATFORM_DESKTOP)",
+      "description": "Toggle window state: fullscreen/windowed [resizes monitor to match window resolution] (only PLATFORM_DESKTOP)",
       "returnType": "void"
     },
     {
       "name": "ToggleBorderlessWindowed",
-      "description": "Toggle window state: borderless windowed (only PLATFORM_DESKTOP)",
+      "description": "Toggle window state: borderless windowed [resizes window to match monitor resolution] (only PLATFORM_DESKTOP)",
       "returnType": "void"
     },
     {
@@ -5485,11 +5485,11 @@
         },
         {
           "type": "Color",
-          "name": "color1"
+          "name": "inner"
         },
         {
           "type": "Color",
-          "name": "color2"
+          "name": "outer"
         }
       ]
     },
@@ -5785,11 +5785,11 @@
         },
         {
           "type": "Color",
-          "name": "color1"
+          "name": "top"
         },
         {
           "type": "Color",
-          "name": "color2"
+          "name": "bottom"
         }
       ]
     },
@@ -5816,11 +5816,11 @@
         },
         {
           "type": "Color",
-          "name": "color1"
+          "name": "left"
         },
         {
           "type": "Color",
-          "name": "color2"
+          "name": "right"
         }
       ]
     },
@@ -5835,19 +5835,19 @@
         },
         {
           "type": "Color",
-          "name": "col1"
+          "name": "topLeft"
         },
         {
           "type": "Color",
-          "name": "col2"
+          "name": "bottomLeft"
         },
         {
           "type": "Color",
-          "name": "col3"
+          "name": "topRight"
         },
         {
           "type": "Color",
-          "name": "col4"
+          "name": "bottomRight"
         }
       ]
     },
@@ -8862,7 +8862,7 @@
     },
     {
       "name": "LoadFontEx",
-      "description": "Load font from file with extended parameters, use NULL for codepoints and 0 for codepointCount to load the default character setFont",
+      "description": "Load font from file with extended parameters, use NULL for codepoints and 0 for codepointCount to load the default character set, font size is provided in pixels height",
       "returnType": "Font",
       "params": [
         {
@@ -10338,6 +10338,60 @@
     {
       "name": "DrawModelWiresEx",
       "description": "Draw a model wires (with texture if set) with extended parameters",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "Model",
+          "name": "model"
+        },
+        {
+          "type": "Vector3",
+          "name": "position"
+        },
+        {
+          "type": "Vector3",
+          "name": "rotationAxis"
+        },
+        {
+          "type": "float",
+          "name": "rotationAngle"
+        },
+        {
+          "type": "Vector3",
+          "name": "scale"
+        },
+        {
+          "type": "Color",
+          "name": "tint"
+        }
+      ]
+    },
+    {
+      "name": "DrawModelPoints",
+      "description": "Draw a model as points",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "Model",
+          "name": "model"
+        },
+        {
+          "type": "Vector3",
+          "name": "position"
+        },
+        {
+          "type": "float",
+          "name": "scale"
+        },
+        {
+          "type": "Color",
+          "name": "tint"
+        }
+      ]
+    },
+    {
+      "name": "DrawModelPointsEx",
+      "description": "Draw a model as points with extended parameters",
       "returnType": "void",
       "params": [
         {
