@@ -1266,8 +1266,28 @@
           "description": "Shader uniform type: ivec4 (4 int)"
         },
         {
-          "name": "RL_SHADER_UNIFORM_SAMPLER2D",
+          "name": "RL_SHADER_UNIFORM_UINT",
           "value": 8,
+          "description": "Shader uniform type: unsigned int"
+        },
+        {
+          "name": "RL_SHADER_UNIFORM_UIVEC2",
+          "value": 9,
+          "description": "Shader uniform type: uivec2 (2 unsigned int)"
+        },
+        {
+          "name": "RL_SHADER_UNIFORM_UIVEC3",
+          "value": 10,
+          "description": "Shader uniform type: uivec3 (3 unsigned int)"
+        },
+        {
+          "name": "RL_SHADER_UNIFORM_UIVEC4",
+          "value": 11,
+          "description": "Shader uniform type: uivec4 (4 unsigned int)"
+        },
+        {
+          "name": "RL_SHADER_UNIFORM_SAMPLER2D",
+          "value": 12,
           "description": "Shader uniform type: sampler2d"
         }
       ]
@@ -2194,7 +2214,7 @@
     },
     {
       "name": "rlDisableWireMode",
-      "description": "Disable wire mode ( and point ) maybe rename",
+      "description": "Disable wire (and point) mode",
       "returnType": "void"
     },
     {
