@@ -385,7 +385,7 @@ module Raylib
   ICON_LAYERS2 = 225
   ICON_MLAYERS = 226
   ICON_MAPS = 227
-  ICON_228 = 228
+  ICON_HOT = 228
   ICON_229 = 229
   ICON_230 = 230
   ICON_231 = 231
